--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Spotify Web</title>
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
 </head>
-<body>
-    
+<body class="debug">
+
+    <main class="flex">
+        <div class="sidebar flex">
+            <div class="sidebar-up">
+
+            </div>
+            <div class="sidebar-down">
+
+            </div>
+        </div>
+        <div class="right-side">
+            <div class="upgrade-bar">
+
+            </div>
+            <div class="principal">
+
+            </div>
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
