--- a/index.html
+++ b/index.html
@@ -15,9 +15,28 @@
     <main class="flex">
         <div class="sidebar flex">
             <div class="sidebar-up">
-
+                <img src="./assets/img/logo.svg" class="logo" alt="logo">
+                <img src="./assets/img/logo-small.svg"class="logo-xs"  alt="logo-small">
+                <div class="sidebar-menu">
+                </div>
+                <div class="sidebar-menu-xs"></div>
+                <div class="sidebar-playlist">
+                    <div>playlist-name</div>
+                    <div>playlist-name</div>
+                    <div>playlist-name</div>
+                    <div>playlist-name</div>
+                    <div>playlist-name</div>
+                    <div>playlist-name</div>
+                    <div>playlist-name</div>
+                    <div>playlist-name</div>
+                    <div>playlist-name</div>
+                    <div>playlist-name</div>
+                    <div>playlist-name</div>
+                </div>
             </div>
             <div class="sidebar-down">
+                <div class="sidebar-user"></div>
+                <div class="sidebar-user-xs"></div>
 
             </div>
         </div>
@@ -26,13 +45,71 @@
 
             </div>
             <div class="principal">
+                <nav>
+                    <a href="#">Lorem</a>
+                    <a href="#">Lorem</a>
+                    <a href="#">Lorem</a>
+                    <a href="#">Lorem</a>
+                    <a href="#">Lorem</a>
+                </nav>
 
+                <section>
+                    <h2>Name Section</h2>
+                    <div class="row">
+                        <div class="col-2 col-md-3 col-s-6">
+                            <div class="card"></div>
+                        </div>
+                        <div class="col-2 col-md-3 col-s-6">
+                            <div class="card"></div>
+                        </div>
+                        <div class="col-2 col-md-3 col-s-6">
+                            <div class="card"></div>
+                        </div>
+                        <div class="col-2 col-md-3 col-s-6">
+                            <div class="card"></div>
+                        </div>
+                        <div class="col-2 col-md-3 col-s-6">
+                            <div class="card"></div>
+                        </div>
+                        <div class="col-2 col-md-3 col-s-6">
+                            <div class="card"></div>
+                        </div>
+
+                    </div>
+                </section>
+
+                <section>
+                    <h2>Name Section</h2>
+                    <div class="row">
+                        <div class="col-2 col-md-3 col-s-6">
+                            <div class="card"></div>
+                        </div>
+                        <div class="col-2 col-md-3 col-s-6">
+                            <div class="card"></div>
+                        </div>
+                        <div class="col-2 col-md-3 col-s-6">
+                            <div class="card"></div>
+                        </div>
+                        <div class="col-2 col-md-3 col-s-6">
+                            <div class="card"></div>
+                        </div>
+                        <div class="col-2 col-md-3 col-s-6">
+                            <div class="card"></div>
+                        </div>
+                        <div class="col-2 col-md-3 col-s-6">
+                            <div class="card"></div>
+                        </div>
+
+                    </div>
+                </section>
             </div>
         </div>
     </main>
 
-    <footer>
-
+    <footer class="flex">
+        <div class="footer-left"></div>
+        <div class="center-footer"></div>
+        <div class="right-footer"></div>
     </footer>
 </body>
 </html>
