complete main section

--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
         </div>
         <div class="right-side">
             <div class="upgrade-bar">
-
+                <a href="#" class="btn-upgrade">Effettua l'upgrade</a>
+                
             </div>
             <div class="principal">
                 <nav>
-                    <a href="#">In evidenza</a>
+                    <a href="#" class="underline-nav">In evidenza<hr></a>
                     <a href="#">Podcast</a>
                     <a href="#">Classifiche</a>
                     <a href="#">Generi e mood</a>
