fix hover on cover

--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/metal_lifting.jpg" alt="album-cover">
-                                    <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    <div class="overlay">
+                                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    </div>
                                 </div>
                                 <a href="#" class="title">Heavy Metal</a>
                                 <div class="author">Subtitle</div>
@@ -76,7 +78,9 @@
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/stranger.jpeg" alt="album-cover">
-                                    <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    <div class="overlay">
+                                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    </div>
                                 </div>
                                 <a href="#" class="title">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</a>
                                 <div class="author">Kyle Dixon & Michael Stein</div>
@@ -86,7 +90,9 @@
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/aquietplace.jpeg" alt="album-cover">
-                                    <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    <div class="overlay">
+                                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    </div>
                                 </div>
                                 <a href="#" class="title">A quiet place</a>
                                 <div class="author">Subtitle</div>
@@ -96,7 +102,9 @@
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/split.jpeg" alt="album-cover">
-                                    <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    <div class="overlay">
+                                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    </div>
                                 </div>
                                 <a href="#" class="title">Split</a>
                                 <div class="author">Subtitle</div>
@@ -106,7 +114,9 @@
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/cure.jpeg" alt="album-cover">
-                                    <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    <div class="overlay">
+                                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    </div>
                                 </div>
                                 <a href="#" class="title">A cure for wellness</a>
                                 <div class="author">Subtitle</div>
@@ -116,7 +126,9 @@
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/sinister.jpeg" alt="album-cover">
-                                    <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    <div class="overlay">
+                                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    </div>
                                 </div>
                                 <a href="#" class="title">Sinister</a>
                                 <div class="author">Subtitle</div>
@@ -136,7 +148,9 @@
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/radar.jpeg" alt="album-cover">
-                                    <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    <div class="overlay">
+                                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    </div>
                                 </div>
                                 <a href="#" class="title">Release radar</a>
                             </div>
@@ -145,7 +159,9 @@
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/mixdaily.jpeg" alt="album-cover">
-                                    <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    <div class="overlay">
+                                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    </div>
                                 </div>
                                 <a href="#" class="title">Daily Mix 1</a>
                             </div>
@@ -164,16 +180,20 @@
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/youg.jpeg" alt="album-cover">
-                                    <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    <div class="overlay over-circle">
+                                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    </div>
                                 </div>
-                                <a href="#" class="title">Youg</a>
+                                <a href="#" class="title">Lana del Rey</a>
                             </div>
                         </div>
                         <div class="col-2 col-md-3 col-s-6">
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/einaudi.jpeg" alt="album-cover">
-                                    <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    <div class="overlay over-circle">
+                                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                                    </div>
                                 </div>
                                 <a href="#" class="title">Ludovico Einaudi</a>
                             </div>
