add part of the sidebar

--- a/index.html
+++ b/index.html
@@ -19,24 +19,42 @@
                 <img src="./assets/img/logo.svg" class="logo" alt="logo">
                 <img src="./assets/img/logo-small.svg"class="logo-xs"  alt="logo-small">
                 <div class="sidebar-menu">
+                    <a href="#"><img src="./assets/img/home.svg" alt="">Home</a>
+                    <a href="#"><img src="./assets/img/search.svg" alt="">Cerca</a>
+                    <a href="#"><img src="./assets/img/libreria.svg" alt="">La tua libreria</a>
                 </div>
-                <div class="sidebar-menu-xs"></div>
+                <div class="sidebar-menu-xs">
+                    <a href="#"><img src="./assets/img/home.svg" alt=""></a>
+                    <a href="#"><img src="./assets/img/search.svg" alt=""></a>
+                    <a href="#"><img src="./assets/img/libreria.svg" alt=""></a>
+                </div>
                 <div class="sidebar-playlist">
-                    <div>playlist-name</div>
-                    <div>playlist-name</div>
-                    <div>playlist-name</div>
-                    <div>playlist-name</div>
-                    <div>playlist-name</div>
-                    <div>playlist-name</div>
-                    <div>playlist-name</div>
-                    <div>playlist-name</div>
-                    <div>playlist-name</div>
-                    <div>playlist-name</div>
-                    <div>playlist-name</div>
+                    <div class="playlist-title">Playlist</div>
+                    <div class="create-playlist">
+                        <a href="#"><i class="fa-solid fa-square-plus"></i>Crea Playlist</a>
+                    </div>
+                    <div class="playlist-list">
+                        <a href="#">Nome Playlist</a>
+                        <a href="#">Nome Playlist</a>
+                        <a href="#">Nome Playlist</a>
+                        <a href="#">Nome Playlist</a>
+                        <a href="#">Nome Playlist</a>
+                        <a href="#">Nome Playlist</a>
+                        <a href="#">Nome Playlist</a>
+                        <a href="#">Nome Playlist</a>
+                        <a href="#">Nome Playlist</a>
+                        <a href="#">Nome Playlist</a>
+                        <a href="#">Nome Playlist</a>
+                        <a href="#">Nome Playlist</a>
+                    </div>
                 </div>
             </div>
             <div class="sidebar-down">
-                <div class="sidebar-user"></div>
+                <div class="sidebar-user">
+                    <a href="#"><img src="./assets/img/download.svg" alt=""> Installa app</a>
+                    <hr>
+                    <a href="#"><img src="./assets/img/" alt=""></a>
+                </div>
                 <div class="sidebar-user-xs"></div>
 
             </div>
@@ -48,7 +66,7 @@
             </div>
             <div class="principal">
                 <nav>
-                    <a href="#" class="underline-nav">In evidenza<hr></a>
+                    <a href="#" class="underline-nav">In evidenza</a>
                     <a href="#">Podcast</a>
                     <a href="#">Classifiche</a>
                     <a href="#">Generi e mood</a>
