add sidebar complete

--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
             </div>
             <div class="sidebar-down">
                 <div class="sidebar-user">
-                    <a href="#"><img src="./assets/img/download.svg" alt=""> Installa app</a>
+                    <a href="#"><img src="./assets/img/download.svg" alt="">Installa app</a>
                     <hr>
-                    <a href="#"><img src="./assets/img/" alt=""></a>
+                    <a href="#"><img src="./assets/img/profile.svg" alt="">John Doe</a>
                 </div>
-                <div class="sidebar-user-xs"></div>
-
+                <div class="sidebar-user-xs">
+                    <a href="#"><img src="./assets/img/download.svg" alt=""></a>
+                    <a href="#"><img src="./assets/img/profile.svg" alt=""></a>
+                </div>
             </div>
         </div>
         <div class="right-side">
