add left and center footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Spotify Web</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
 </head>
-<body class="debug">
+<body>
 
     <main class="flex">
         <div class="sidebar flex">
@@ -227,8 +227,35 @@
     </main>
 
     <footer class="flex">
-        <div class="footer-left"></div>
-        <div class="center-footer"></div>
+        <div class="footer-left flex">
+            <img src="./assets/img/sinister.jpeg" alt="">
+            <div class="player-description">
+                <div class="player-title">Sinister</div>
+                <a href="#" class="player-subtitle">Brano nome</a>
+            </div>
+            <div class="footer-left-icon flex">
+                <a href="#"><i class="fa-regular fa-heart"></i>
+                </a>
+                <a href="#"><i class="fa-regular fa-folder"></i>
+                </a>
+            </div>
+        </div>
+        <div class="center-footer">
+            <div class="center-footer-up flex">
+                <a href="#"><i class="fa-solid fa-shuffle"></i></a>
+                <a href="#"><i class="fa-solid fa-backward-step"></i></a>
+                <a href="#"><i class="fa-regular fa-circle-play"></i></a>
+                <a href="#"><i class="fa-solid fa-forward-step"></i></a>
+                <a href="#"><i class="fa-solid fa-rotate-right"></i></a>
+            </div>
+            <div class="center-footer-down flex">
+                <div class="player-time">0:25</div>
+                <div class="player-line">
+                </div>
+                <div class="player-time">4:35</div>
+
+            </div>
+        </div>
         <div class="right-footer"></div>
     </footer>
 </body>
