--- a/index.html
+++ b/index.html
@@ -250,13 +250,18 @@
             </div>
             <div class="center-footer-down flex">
                 <div class="player-time">0:25</div>
-                <div class="player-line">
-                </div>
+                <div class="player-line">                </div>
                 <div class="player-time">4:35</div>
-
             </div>
         </div>
-        <div class="right-footer"></div>
+        <div class="footer-right flex">
+            <div class="footer-right-icon flex">
+                <a href="#"><i class="fa-solid fa-list-ul"></i></a>
+                <a href="#"><i class="fa-solid fa-desktop"></i></a>
+            </div>
+            <a href="#"><i class="fa-solid fa-volume-high"></i></a>
+            <div class="volume-line"></div>
+        </div>
     </footer>
 </body>
 </html>
