refactoring and bonus
add bonus part

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <img src="./assets/img/logo-small.svg"class="logo-xs"  alt="logo-small">
                 <div class="sidebar-menu">
                     <a href="#"><img src="./assets/img/home.svg" alt="">Home</a>
-                    <a href="#"><img src="./assets/img/search.svg" alt="">Cerca</a>
-                    <a href="#"><img src="./assets/img/libreria.svg" alt="">La tua libreria</a>
+                    <a href="#" class="op-50"><img src="./assets/img/search.svg" alt="">Cerca</a>
+                    <a href="#" class="op-50"><img src="./assets/img/libreria.svg" alt="">La tua libreria</a>
                 </div>
                 <div class="sidebar-menu-xs">
                     <a href="#"><img src="./assets/img/home.svg" alt=""></a>
-                    <a href="#"><img src="./assets/img/search.svg" alt=""></a>
-                    <a href="#"><img src="./assets/img/libreria.svg" alt=""></a>
+                    <a href="#" class="op-50"><img src="./assets/img/search.svg" alt=""></a>
+                    <a href="#" class="op-50"><img src="./assets/img/libreria.svg" alt=""></a>
                 </div>
                 <div class="sidebar-playlist">
                     <div class="playlist-title">Playlist</div>
@@ -51,12 +51,12 @@
             </div>
             <div class="sidebar-down">
                 <div class="sidebar-user">
-                    <a href="#"><img src="./assets/img/download.svg" alt="">Installa app</a>
+                    <a href="#" class="op-50"><img src="./assets/img/download.svg" alt="">Installa app</a>
                     <hr>
                     <a href="#"><img src="./assets/img/profile.svg" alt="">John Doe</a>
                 </div>
                 <div class="sidebar-user-xs">
-                    <a href="#"><img src="./assets/img/download.svg" alt=""></a>
+                    <a href="#" class="op-50"><img src="./assets/img/download.svg" alt=""></a>
                     <a href="#"><img src="./assets/img/profile.svg" alt=""></a>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                                 <div class="author">Kyle Dixon & Michael Stein</div>
                             </div>
                         </div>
-                        <div class="col-2 col-md-3 col-s-6">
+                        <div class="col-2 col-md-3 col-s-0">
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/aquietplace.jpeg" alt="album-cover">
@@ -118,7 +118,7 @@
                                 <div class="author">Subtitle</div>
                             </div>
                         </div>
-                        <div class="col-2 col-md-3 col-s-6">
+                        <div class="col-2 col-md-3 col-s-0">
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/split.jpeg" alt="album-cover">
@@ -130,7 +130,7 @@
                                 <div class="author">Subtitle</div>
                             </div>
                         </div>
-                        <div class="col-2 col-md-3 col-s-6">
+                        <div class="col-2 col-md-0">
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/cure.jpeg" alt="album-cover">
@@ -142,7 +142,7 @@
                                 <div class="author">Subtitle</div>
                             </div>
                         </div>
-                        <div class="col-2 col-md-3 col-s-6">
+                        <div class="col-2 col-md-0">
                             <div class="card">
                                 <div class="cover">
                                     <img src="./assets/img/sinister.jpeg" alt="album-cover">
